# SparseMFEFold

./: .gitignore  .hgignore  .travis.yml  AUTHORS  ChangeLog  Doxyfile  Makefile.am  README  configure.ac  index.html  params.json
src/: Makefile.am  SparseMFEFold.cc  SparseMFEFold.ggo  base.hh  enum_ils.cc  halfzuker.cc  simple_map.hh  sweetener.cc  trace_arrow.cc  trace_arrow.hh
